# scion-tools

./: .gitignore  Makefile
scion-cabal/: Main.hs  scion-cabal.cabal
scion-core/: scion-core.cabal
scion-core/Development/Scion/: Cabal.hs  Compile.hs  Core.hs  Dispatcher.hs  WorkerMessage.hs
scion-core/Development/Scion/Utils/: IO.hs
scion-ghc/: Main.hs  scion-ghc.cabal
scion-ghc/src/: Main.hs
scion-ipc/: scion-ipc.cabal  test.hs
scion-ipc/Development/Scion/: Binary.hs  BinaryCBOR.hs  Message.hs  Types.hs
tests/: LICENSE  Main.hs  scion-tests.cabal
tests/data/single-file/: 0001-undefined-var.hs  0002-undefined-var-primed1.hs  0003-undefined-var-primed2.hs  0004-undefined-type.hs  0005-language-pragma.hs  0006-imports1.hs  0007-language-pragma-err1.hs
