name:             scion-core
version:          0.9
license:          BSD3
license-file:     LICENSE
author:           Thomas Schilling
maintainer:       nominolo@googlemail.com
category:         Development
synopsis:         Core utils of Scion IDE tools
build-type:       Simple
cabal-version:    >= 1.6

source-repository head
  type: git
  location: https://github.com/nominolo/scion-tools

library
  build-depends:
      base
    , binary                            >= 0.7 && < 0.8
    , aeson                             >= 0.7 && < 0.8
    , text                              >= 0.11 && < 1.2

  exposed-modules:
    Development.Scion.Core
    Development.Scion.Dispatcher
