name:             scion-core
version:          0.9
license:          BSD3
license-file:     LICENSE
author:           Thomas Schilling
maintainer:       nominolo@googlemail.com
category:         Development
synopsis:         Core utils of Scion IDE tools
build-type:       Simple
cabal-version:    >= 1.8

source-repository head
  type: git
  location: https://github.com/nominolo/scion-tools

library
  build-depends:
      base

    , Cabal                             >= 1.18 && < 1.19
    , aeson                             >= 0.7 && < 0.8
    , async                             >= 2.0 && < 2.1
    , attoparsec
    , binary                            >= 0.7 && < 0.8
    , bytestring                        < 0.10.1 || >= 0.10.4.0
    , directory                         >= 1.1 && < 1.3
    , filepath                          >= 1.3 && < 1.4
    , process                           >= 1.2 && < 1.3
    , shake                             == 0.11.*
    , stm                               >= 2.4 && < 2.5
    , text                              >= 0.11 && < 1.2
    , time                              == 1.4.*

  exposed-modules:
    Development.Scion.Core
    Development.Scion.Dispatcher

  ghc-options: -Wall -with-rtsopts=-threaded
  ghc-prof-options: -prof -auto-all
