name:             scion-ghc
version:          0.9
license:          BSD3
license-file:     LICENSE
author:           Thomas Schilling
maintainer:       nominolo@googlemail.com
category:         Development
synopsis:         GHC wrapper used by Scion
build-type:       Simple
cabal-version:    >= 1.8

source-repository head
  type: git
  location: https://github.com/nominolo/scion-tools

executable scion-ghc
  main-is: Main.hs

  hs-source-dirs: src

  build-depends:
      base

    , scion-ipc                         == 0.9.*

--    , Cabal                             >= 1.18   && < 1.19
--    , Cabal                             >= 1.16
    , directory                         >= 1.1    && < 1.3
    , filepath                          >= 1.3    && < 1.4
    , ghc                               == 7.6.*
    , ghc-paths                         == 0.1.*
    , optparse-applicative              >= 0.8    && < 0.10
    , text                              == 0.11.*

  ghc-options: -Wall -threaded -with-rtsopts=-T
  ghc-prof-options: -prof -auto-all
