name:             scion-tests
version:          0.0
license:          BSD3
license-file:     LICENSE
author:           Thomas Schilling
maintainer:       nominolo@googlemail.com
category:         Development
synopsis:         Core utils of Scion IDE tools
build-type:       Simple
cabal-version:    >= 1.8

source-repository head
  type: git
  location: https://github.com/nominolo/scion-tools

executable test

  build-depends:
      base
    , scion-core

    , filepath                          >= 1.3 && < 1.4
    , tasty                             >= 0.8 && < 0.9
    , tasty-hunit                       >= 0.8 && < 0.9

  main-is: Main.hs
